--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,7 +4,9 @@ langchain-community==0.3.24
 sentence-transformers==4.1.0
 chromadb==1.0.9
 openai==1.78.1
-
+langchain
+langchain-community
+langchain-openai
 
 
 
